--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <div>
   <h3>
-    Hey there, I'm David Montricher, an independent web developer and product manager <a target="_blank" href="https://instagram.com/humansofny/">based in New York</a>. I enjoy writing code to craft beautiful user experiences and web appplications for people at <a target="_blank" id="intuitive" href="http://www.intuitive.nyc">Intuitive</a>. I care about keeping the web open and accessible to all, so I contribute to open source and teach how to code at <a target="_blank" href="http://www.c4q.nyc">C4Q</a>. See my code on <a target="_blank" href="http://www.github.com/montricher">Github</a>, tweet me <a target="_blank" href="http://www.twitter.com/deinonino">here</a> and let's connect on <a target="_blank" href="http://www.linkedin.com/in/montricher">Linkedin</a>. And even if it's just to say hi, please <a href="mailto:david@montricher.com">get in touch</a> with me.
+    Hey there, I'm David Montricher, an independent web developer and product manager <a target="_blank" href="https://instagram.com/humansofny/">based in New York</a>. I enjoy writing code to craft beautiful user experiences and web appplications for people at <a target="_blank" id="intuitive" href="http://www.intuitive.nyc">Intuitive</a>. I care about keeping the web open and accessible to all, so I contribute to open source and teach how to code at <a target="_blank" href="http://www.c4q.nyc">C4Q</a>. See my code on <a target="_blank" href="http://www.github.com/montricher">Github</a>, tweet me <a target="_blank" href="http://www.twitter.com/deinonino">here</a> and let's connect on <a target="_blank" href="http://www.linkedin.com/in/montricher">Linkedin</a>. And even if it's just to say hi, please <a href="mailto:david@montricher.com">get in touch</a> with me. Now, try to catch one of these tiny balls with your cursor.
   </h3>
 </div>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-var width = 920,
+var width = 900,
     height = 400;
 
 var nodes = d3.range(199).map(function() { return {radius: Math.random() * 12 + 4}; }),
