And more updates

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
-  <title>David Montricher | Web Developer + Product Manager</title>
+  <title>David Montricher | Web Developer + Product Manager based in New York</title>
 </head>
 
 <body>
@@ -9,7 +9,7 @@
 
 <div>
   <h3>
-    Hey there, I'm David Montricher, an independent web developer and product manager <a target="_blank" href="http://www.humansofnewyork.com/">based in New York</a>. I enjoy writing code to craft beautiful user experiences and web applications for people at <a target="_blank" id="intuitive" href="http://www.hellointuitive.com">Intuitive</a>. I care about keeping the web open and accessible to all, so I contribute to open source projects and teach how to code at <a target="_blank" href="http://www.c4q.nyc">C4Q</a> and <a target="_blank" href="http://www.scripted.org">ScriptEd</a>. Read some code on <a target="_blank" href="http://www.github.com/montricher">Github</a>, tweet me <a target="_blank" href="http://www.twitter.com/deinonino">here</a> and let's connect on <a target="_blank" href="http://www.linkedin.com/in/montricher">LinkedIn</a>. Even if it's just to say hi, please <a href="mailto:david@montricher.com">get in touch</a>. Now catch one of these tiny balls with your cursor.
+    Hey there, I'm David Montricher, an independent web developer and product manager <a target="_blank" href="http://wearemadeinny.com/">based in New York</a>. I enjoy writing code to craft beautiful user experiences and web applications for people at <a target="_blank" id="intuitive" href="http://www.hellointuitive.com">Intuitive</a>. I care about keeping the web open and accessible to all, so I contribute to open source projects and teach how to code at <a target="_blank" href="http://www.c4q.nyc">C4Q</a> and <a target="_blank" href="http://www.scripted.org">ScriptEd</a>. Read some code on <a target="_blank" href="http://www.github.com/montricher">Github</a>, tweet me <a target="_blank" href="http://www.twitter.com/deinonino">here</a> and let's connect on <a target="_blank" href="http://www.linkedin.com/in/montricher">LinkedIn</a>. Even if it's just to say hi, please <a href="mailto:david@montricher.com">get in touch</a>. Now catch one of these tiny balls with your cursor.
   </h3>
 </div>
 
